--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,10 +1,11 @@
 <h1>BUSINESS INDEX</h1>
 
+  <h3><%= link_to 'LOG IN', new_bsession_path %></h3>
+
   <tbody>
     <% @businesses.each do |b| %>
       <tr>
-        <td><%= b.company_name %></td>
-        <td><%= b.email %></td>
+        <td><%= b.name %></td>
         <td><%= link_to 'Show', b %></td>
         <td><%= link_to 'Edit', edit_business_path(b) %></td>
         <td><%= link_to 'Destroy', b, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -17,8 +18,5 @@
 <br>
 
 <%= link_to 'New Business', new_business_path %>
-
-
-<%= link_to 'LOG IN', new_bsession_path %>
 
 <br>
