--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -14,24 +14,20 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :company_name %><br>
-    <%= f.text_field :company_name %>
-  </div>
-  <div class="field">
-    <%= f.label :phone %><br>
-    <%= f.text_field :phone %>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
   </div>
   <div class="field">
     <%= f.label :email %><br>
     <%= f.text_field :email %>
   </div>
   <div class="field">
-    <%= f.label :website_url %><br>
-    <%= f.text_field :website_url %>
+    <%= f.label :password %><br>
+    <%= f.password_field :password %>
   </div>
   <div class="field">
-    <%= f.label :password_digest %><br>
-    <%= f.password_field :password_digest %>
+    <%= f.label :password_confirmation %><br>
+    <%= f.password_field :password_confirmation %>
   </div>
   <br>
   <div class="actions">
