--- a/app/views/campaigns/edit.html.erb
+++ b/app/views/campaigns/edit.html.erb
@@ -14,20 +14,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :post_copy %><br>
-    <%= f.text_field :post_copy %>
-  </div>
-  <div class="field">
-    <%= f.label :start %><br>
-    <%= f.text_field :start %>
-  </div>
-  <div class="field">
-    <%= f.label :end %><br>
-    <%= f.text_field :end %>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
   </div>
   <div class="actions">
     <%= f.submit %>
