--- a/app/views/bsessions/new.html.erb
+++ b/app/views/bsessions/new.html.erb
@@ -11,15 +11,14 @@
   <% end %>
 
 
-  <!-- EMAIL FIELD -->
+  <!-- NAME FIELD -->
   <div class="input-group">
     <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-      <%= f.text_field :email, required:true, :class => "form-control input-lg", placeholder: "Email Here..." %>
+      <%= f.text_field :name, required:true, :class => "form-control input-lg", placeholder: "Name Here..." %>
   </div>
-
   <!-- PASSWORD FIELD -->
   <div class="input-group">
-    <span class="input-group-addon"><i class="glyphicon glyphicon-asterisk"></i></span>
+    <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
       <%= f.password_field :password, required:true, :class => "form-control input-lg", placeholder: "Password Here..." %>
   </div>
 
