--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -4,28 +4,9 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @business.company_name %>
-</p>
-
-<p>
-  <strong>Phone:</strong>
-  <%= @business.phone %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @business.email %>
-</p>
-
-<p>
-  <strong>Website:</strong>
-  <%= @business.website_url %>
-</p>
-
-<p>
-  <strong>Password:</strong>
-  <%= @business.password_digest %>
+  <%= @business.name %>
 </p>
 
 <%= link_to 'Edit', edit_business_path(@business) %> |
-<%= link_to 'Back', businesses_path %>
+<%= link_to 'Back', businesses_path %> |
+<%= link_to 'Create a Campaign for this Business', new_campaign_path %>
