--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+	<div id="container">
+		<div id="user_nav">
+			<% if current_user %>
+				Signed in as <%= current_user.name %>!
+				<%= link_to "Sign out", signout_path %>
+			<% else %>
+				<%= link_to "Sign in with Twitter", "auth/twitter" %>
+			<% end %>
 <%= yield %>
 
 <ul>
