added my recent changes to the latest pull on Github, we now have a smooth transition for the Business model with pictures and stuff

--- a/app/views/businesses/edit.html.erb
+++ b/app/views/businesses/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>EDIT BUSINESSES</h1>
+<h1>EDIT <%= current_business.name %></h1>
 
 <%= form_for(@business) do |f| %>
   <% if @business.errors.any? %>
