--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -1,5 +1,6 @@
 <h1>CAMPAIGNS INDEX</h1>
 
+<p>The latest campaign is connected to: <%= Campaign.last.business.name %></p>
 
   <tbody>
     <% @campaigns.each do |c| %>
