--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
 			<% end %>
 <%= yield %>
 
+<%= current_user %>
 <ul>
   <li><%= link_to 'USERS', users_path %></li>
   <li><%= link_to 'BUSINESSES', businesses_path %></li>
