--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,12 +1,39 @@
+<%= current_business.tweets %>
 <%= form_tag charges_path do %>
   <article>
     <label class="amount">
-      <span>Amount: $5.00</span>
+      <span>$10.00 / 5 Tweets</span>
     </label>
   </article>
-
+  <%= hidden_field_tag(:money, 1000) %>
   <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-description="A month's subscription"
-          data-amount="500"></script>
+          data-description="5 Tweets"
+          data-amount="1000"></script>
+<% end %>
+
+<%= form_tag charges_path do %>
+  <article>
+    <label class="amount">
+      <span>$30.00 / 20 Tweets</span>
+    </label>
+  </article>
+  <%= hidden_field_tag(:money, 3000) %>
+  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+          data-description="5 Tweets"
+          data-amount="3000"></script>
+<% end %>
+
+<%= form_tag charges_path do %>
+  <article>
+    <label class="amount">
+      <span>$100.00 40 Tweets</span>
+    </label>
+  </article>
+  <%= hidden_field_tag(:money, 10000) %>
+  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+          data-description="5 Tweets"
+          data-amount="10000"></script>
 <% end %>
