--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -5,7 +5,7 @@
       <span>$10.00 / 5 Tweets</span>
     </label>
   </article>
-  <%= hidden_field_tag(:money, 1000) %>
+  <%= hidden_field_tag(:money, "1000") %>
   <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
           data-description="5 Tweets"
@@ -18,7 +18,7 @@
       <span>$30.00 / 20 Tweets</span>
     </label>
   </article>
-  <%= hidden_field_tag(:money, 3000) %>
+  <%= hidden_field_tag(:money, "3000") %>
   <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
           data-description="5 Tweets"
@@ -28,10 +28,10 @@
 <%= form_tag charges_path do %>
   <article>
     <label class="amount">
-      <span>$100.00 40 Tweets</span>
+      <span>$100.00 / 60 Tweets</span>
     </label>
   </article>
-  <%= hidden_field_tag(:money, 10000) %>
+  <%= hidden_field_tag(:money, "10000") %>
   <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
           data-description="5 Tweets"
