--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+  <%= render 'layouts/nav' %>
 	<div id="container">
 		<div id="user_nav">
 			<% if current_user %>
