--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <%= render 'layouts/nav' %>
 	<div id="container">
-		<div id="user_nav">
+		<div id="user_nav">`
 			<% if current_user %>
 				Signed in as <%= current_user.name %>!
 				<%= link_to "Sign out", signout_path %>
