--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -21,7 +21,7 @@
               <% if current_user %>Signed in as <%= current_user.name %>!
                 <%= link_to "Sign out", signout_path %>
               <% else %>
-                <%= link_to "Sign in with Twitter", "auth/twitter" %>
+                <%= link_to image_tag("sign-in-with-twitter-gray.png"), "auth/twitter" %>
               <% end %>
             </a></li>
             <li class="divider"></li>
