--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
 <%= yield %>
 
 <%= current_user %>
+<%= binding.pry %>
 <ul>
   <li><%= link_to 'USERS', users_path %></li>
   <li><%= link_to 'BUSINESSES', businesses_path %></li>
