added more current_user examples to demo my point

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,11 @@
 			<% end %>
 <%= yield %>
 
-<%= current_user %>
-<%= binding.pry %>
+<%= current_user %></br>
+<%= current_user.name %></br>
+<%= current_user.uid %></br>
+<%= current_user.description %>
+
 <ul>
   <li><%= link_to 'USERS', users_path %></li>
   <li><%= link_to 'BUSINESSES', businesses_path %></li>
