--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -17,9 +17,13 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">User<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a>Login - fake</a></li>
-            <li><a><%= link_to 'Sign up', new_user_path %></a></li>
-            <li><a>Logout - fake</a></li>
+            <li><a>
+              <% if current_user %>Signed in as <%= current_user.name %>!
+                <%= link_to "Sign out", signout_path %>
+              <% else %>
+                <%= link_to image_tag("sign-in-with-twitter-gray.png"), "auth/twitter" %>
+              <% end %>
+            </a></li>
             <li class="divider"></li>
             <li><a>Edit - need a current_user session</a></li>
             <li class="divider"></li>
@@ -29,8 +33,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Business<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a><%= link_to 'Login', new_session_path %></a></li>
-            <li><a><%= link_to 'Sign up', new_business_path if !current_business %></a></li>
+            <li class="navbar-text pointer" data-toggle="modal" data-target="#loginModal"><a href="#">Log in</a></li>
+            <li class="navbar-text pointer" data-toggle="modal" data-target="#userModal"><a href="#">Sign up</a></li>
             <li><a><%= link_to 'Logout', session_path, method: :delete if current_business%></a></li>
             <li class="divider"></li>
             <li><a><%= link_to 'Edit Profile', edit_business_path(current_business.id), method: :get if current_business%></a></li>
@@ -41,9 +45,76 @@
         <li><%= link_to 'New Campaign', new_campaign_path if current_business%></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a><%= 'Not currently logged in' if !current_business%></a></li>
+        <li><a><%= 'Not currently logged in' if !current_business && !current_user%></a></li>
         <li><a><%= 'Currently logged in as: '+current_business.name if current_business%></a></li>
+        <li><a><%= 'Currently logged in as: '+current_user.name if current_user%></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
+<!-- Log in Modal -->
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" tabindex="-1"  data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+    <%= form_for business_new, url: session_path do |f| %>
+    <% flash.each do |k,v| %>
+    <div class="col-md-12 alert alert-danger" role="alert">
+      <%= v %>
+    </div>
+  <% end %>
+     <%= hidden_field_tag :test, "test" %>
+    Username:  <%= f.text_field :name, required:true, :class => "form-control input-lg", placeholder: "Name Here..." %>
+    <br />
+    Password: <%= f.password_field :password, required:true, :class => "form-control input-lg", placeholder: "Password Here..." %>
+    <%= f.submit "Log in", :class => 'startbuttons' %>
+  <% end %>
+      </div>
+      <div class="modal-footer">
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Sign up Modal -->
+<div class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" tabindex="-1"  data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+          <%= form_for business_new do |f| %>
+      <div class="field">
+        <%= f.label :name %><br>
+        <%= f.text_field :name %>
+      </div>
+      <div class="field">
+        <%= f.label :email %><br>
+        <%= f.text_field :email %>
+      </div>
+      <div class="field">
+        <%= f.label :password %><br>
+        <%= f.password_field :password %>
+      </div>
+      <div class="field">
+        <%= f.label :password_confirmation %><br>
+        <%= f.password_field :password_confirmation %>
+      </div>
+      <br>
+      <div class="actions">
+        <%= f.submit "Sign up" %>
+      </div>
+    <% end %>
+      </div>
+      <div class="modal-footer">
+      </div>
+    </div>
+  </div>
+</div>
