--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <% if !current_user.nil? %>
+    <p>Click The link below to send a tweet.</p>
+    <%= link_to "Send a Tweet", new_tweet_path %>
+<% else %>
+    <p>You must log in to send a tweet.</p>
+<% end %>
 
   <%= render 'layouts/nav' %>
 
