--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1>USERS INDEX</h1>
+<h1>USERS INDEX IS CURRENTLY OUR HOME PAGE</h1>
 
 
   <tbody>
@@ -13,9 +13,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New User', new_user_path %>
-
-<br>
