--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="adApp">
 <head>
   <title>ADvocate</title>
   <%= stylesheet_link_tag    'http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' %>
@@ -8,21 +8,15 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= stylesheet_link_tag 'http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css' %>
   <%= javascript_include_tag 'http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js' %>
+  <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.16/angular.js" %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body ng-controller="adController">
 
   <%= render 'layouts/nav' %>
 
 <%= yield %>
-
-<%= current_user %>
-<ul>
-  <li><%= link_to 'USERS', users_path %></li>
-  <li><%= link_to 'BUSINESSES', businesses_path %></li>
-  <li><%= link_to 'CAMPAIGNS', campaigns_path %></li>
-</ul>
 
 </body>
 </html>
