--- a/app/views/campaigns/edit.html.erb
+++ b/app/views/campaigns/edit.html.erb
@@ -23,4 +23,4 @@
 <% end %>
 
 <%= link_to 'Show', @campaign %>
-<%= link_to 'Back', campaigns_path %>
+<%= link_to 'Destroy', @campaign, method: :delete, data: { confirm: 'Are you sure?' } %>
