--- a/app/assets/stylesheets/twitter.css
+++ b/app/assets/stylesheets/twitter.css
@@ -35,7 +35,8 @@ header {
 
 .bg {
   border-bottom: 8px solid #5cc0ff; 
-  width: 100%;}
+  width: 100%;
+  height: 300px;}
 
 .bio:hover > .desc {
   cursor: pointer;
