combined business show page

--- a/app/assets/stylesheets/twitter.css
+++ b/app/assets/stylesheets/twitter.css
@@ -19,6 +19,7 @@ header {
   border-top-right-radius: 8px; }
 
 .post_container {
+  float: left;
   width: 320px;
   display: block;
   margin: 3em auto 1em auto;
