--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,89 +1,16 @@
-<div class="parallax">
-  <!-- video/billboard level -->
-  <div id="video-level" class="parallax-group">
-    <div class="parallax-layer parallax-layer-nav">
-      <div class="navbar-billboard">
-        <div class="logo"></div>
-      </div>
-    </div>
-    <div class="parallax-layer parallax-layer-4">
-      <div class="birdmove">
-        <div class="twitterbird"></div>
-      </div>
-    </div>
-    <div class="parallax-layer parallax-layer-1">
-        <div class="billboard"></div>
-    </div>
-  </div>
-  <!-- clouds level -->
-  <div id="clouds-level" class="parallax-group">
-    <div class="parallax-layer parallax-layer-nav">
-      <div class="navbar-clouds">
-        <div class="logo"></div>
-      </div>
-    </div>
-    <div class="parallax-layer parallax-layer-3">
-      <div class="cloud4"></div>
-      <div class="cloud5"></div>
-      <div class="cloud6"></div>
-    </div>
-    <div class="parallax-layer parallax-layer-2">
-      <div class="cloud"></div>
-      <div class="cloud2"></div>
-      <div class="cloud3"></div>
-    </div>
-    <div class="parallax-layer parallax-layer-4">
-      <div class="backgroundcloud"></div>
-    </div>
-  </div>
-  <!-- city building level -->
-  <div id="city-level" class="parallax-group">
-    <div class="parallax-layer parallax-layer-2">
-      <div class="citybg">
-        <div class="buildinglights"></div>
-        <div class="buildinglights2"></div>
-        <div class="buildinglights3"></div>
-      </div>
-    </div>
-    <div class="parallax-layer parallax-layer-1">
-      <div class="citybgnorm"></div>
-    </div>
-    <div class="parallax-layer parallax-layer-4">
-      <div class="citybglight"></div>
-    </div>
-  </div>
-  <!-- grass/local business building level -->
-  <div id="building-level" class="parallax-group">
-    <div class="parallax-layer parallax-layer-nav">
-      <div class="navbar-grass">
-        <div class="logo"></div>
-      </div>
-    </div>
-    <div class="parallax-layer parallax-layer-4">
-      <div class="darkgrass"></div>
-    </div>
-    <div class="parallax-layer parallax-layer-1">
-      <div class="grass"></div>
-      <div class="localbusiness">
-        <div class="lamplight"></div>
-      </div>
-    </div>
-    <div class="parallax-layer parallax-layer-2">
-      <div class="leaves"></div>
-    </div>
-  </div>
-  <div id="underground-level" class="parallax-group">
-    <div class="parallax-layer parallax-layer-nav">
-      <div class="navbar-ug">
-        <div class="logo"></div>
-      </div>
-    </div>
-    <div class="parallax-layer parallax-layer-4">
-      <div class="pipecontainer">
-        <div class="pipeleft"></div>
-        <div class="piperight"></div>
-        <div class="pipecenter"></div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= current_user.screen_name %>
+<%= current_user.description %>
+<%= current_user.tweets %>
+<span>Tweets</span>
+
+<%= current_user.followers %>
+<span>Followers</span>
+<h1>
+<%= current_user.friends %>
+
+  <% @campaigns.each do |c| %>
+  <%= c.business.name %>
+  <%= c.name %>
+  <%= button_to 'Post to Twitter', post_path(current_user, :status => c.status, :img => c.avatar.url ), data: {confirm: 'Are you sure you want to post this ad?'} %>
+  <% end %>
+</h1>
