--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,6 +11,7 @@
   <% @campaigns.each do |c| %>
   <%= c.business.name %>
   <%= c.name %>
+  <%= image_tag c.avatar.url(:medium) %>
   <%= button_to 'Post to Twitter', post_path(current_user, :status => c.status, :img => c.avatar.url ), data: {confirm: 'Are you sure you want to post this ad?'} %>
   <% end %>
 </h1>
