--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,3 +1,8 @@
+<style>
+body, html {
+  overflow: hidden;
+}
+</style>
 <div class="parallax">
   <!-- video/billboard level -->
   <div id="video-level" class="parallax-group">
