--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -19,6 +19,7 @@
           <div class="content">
               <div>
                 <h3><%= c.name %></h3>
+                <h3>Tweets: <%= c.tweets %></h3>
                 <p ng-model="status"><%= c.status %></p>
               </div>
             <div><a href="https://twitter.com/intent/tweet?text=<%=c.status%> #ADvocates" class="twitter-hashtag-button" data-size="large" onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=no,resizable=no,width=680px,height=265px');return false;"></a></div>
@@ -42,12 +43,23 @@
       <div class="tab-pane active" id="newcamp">
         <!-- new campaigns begin -->
         <%= form_for(campaign_new) do |f| %>
+        <% if campaign_new.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@campaign.errors.count, "error") %> prohibited this user from being saved:</h2>
+
+          <ul>
+            <% campaign_new.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+        <% end %>
           <% if campaign_new.errors.any? %>
             <div id="error_explanation">
               <h2><%= pluralize(@campaign.errors.count, "error") %> prohibited this user from being saved:</h2>
 
               <ul>
-              <% @campaign.errors.full_messages.each do |msg| %>
+              <% campaign_new.errors.full_messages.each do |msg| %>
                 <li><%= msg %></li>
               <% end %>
               </ul>
@@ -73,6 +85,10 @@
           <div class="field">
             <%= f.label 'Minimum ADvocate Followers' %><br>
             <%= f.number_field :followers %>
+          </div>
+          <div class="field">
+            <%= f.label 'Tweets' %><br>
+            <%= f.number_field :tweets %>
           </div>
 
             <%= f.hidden_field :business_id, value: @business.id %>
@@ -130,16 +146,3 @@
     </div>
   </div>
 </div>
-
-<script>
-    ! function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0],
-            p = /^http:/.test(d.location) ? 'http' : 'https';
-        if (!d.getElementById(id)) {
-            js = d.createElement(s);
-            js.id = id;
-            js.src = p + '://platform.twitter.com/widgets.js';
-            fjs.parentNode.insertBefore(js, fjs);
-        }
-    }(document, 'script', 'twitter-wjs');
-</script>
