--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -1,3 +1,4 @@
+
 .userpostscontainer {
 	margin-left: auto;
 	margin-right: auto;
@@ -9,16 +10,39 @@
 	padding: 10px;
 }
 
+.user-name {
+	font-family: "HelveticaNeue-Light";
+	font-weight: bold;
+	font-size: 16px;
+}
+
+.userindex-container {
+	width: 1000px;
+	margin-left: auto;
+	margin-right: auto;
+}
+/*user information*/
+
+.usercontainer {
+	background-color: white;
+	width: 200px;
+	height: 200px;
+	float: left;
+	border-radius: 5px;
+}
+
 /*twitter user index*/
 
 .scrollcontainer {
 	overflow: scroll;
 	width: 750px;
+	height: 100vh;
+	padding-left: 20px;
 }
+
 .twitcontainer {
 	float: left;
 	width: 588px;
-	height: 100%;
 	background-color: white;
 	border-radius: 5px;
 }
@@ -26,6 +50,7 @@
 .twitcontent {
 	width: 588px;
 	float: left;
+	border-bottom: 1px solid #e1e8ed;
 }
 
 .campaignname {
@@ -115,3 +140,4 @@
 	width: 150px;
 	padding: 10px;
 }
+
