--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,38 +1,44 @@
-<div class="scrollcontainer">
-	<div class="twitcontainer">
-		<% @campaigns.each do |c| %>
-			<div class="twitcontent">
+<div class="userindex-container">
+	<div class="usercontainer">
+		<div class="user-name"><%= current_user.name %></div>
+	</div>
 
-				<div class="twitprofile">
-					<%= image_tag current_user.image, :class=>"twitprofilepic" %>
+	<div class="scrollcontainer">
+		<div class="twitcontainer">
+			<% @campaigns.each do |c| %>
+				<div class="twitcontent">
+
+					<div class="twitprofile">
+						<%= image_tag current_user.image, :class=>"twitprofilepic" %>
+					</div>
+					<div class="twitright">
+						<div class="campaignname">
+							<%= c.name %>
+						</div>
+						<div class="twitname">
+							<%= current_user.name %>
+						</div>
+						<div class="twitscreenname">
+							  &nbsp @<%= current_user.screen_name %>
+						</div>
+
+						<div class="status">
+							<%= c.status %>
+						</div>
+						<div class="twitstatusimg">
+							<%= image_tag(c.avatar.url(:large), :class => "statusimg") %>
+						</div>
+						<div class="promotedby">
+							Promoted by <%= c.business.name %>
+						</div>
+						<div class="twitbutton">
+					  		<%= button_to 'Post to Twitter', post_path(current_user, :status => c.status, :img => c.avatar.url(:medium), :campaign => c.id ), data: {confirm: 'Are you sure you want to post this ad?'}, :class => "usertwitbutton" %>
+						</div>
+					</div>
 				</div>
-				<div class="twitright">
-					<div class="campaignname">
-						<%= c.name %>
-					</div>
-					<div class="twitname">
-						<%= current_user.name %>
-					</div>
-					<div class="twitscreenname">
-						  &nbsp @<%= current_user.screen_name %>
-					</div>
+			<% end %>
 
-					<div class="status">
-						<%= c.status %>
-					</div>
-					<div class="twitstatusimg">
-						<%= image_tag(c.avatar.url(:original), :class => "statusimg") %>
-					</div>
-					<div class="promotedby">
-						Promoted by <%= c.business.name %>
-					</div>
-					<div class="twitbutton">
-				  		<%= button_to 'Post to Twitter', post_path(current_user, :status => c.status, :img => c.avatar.url(:medium), :campaign => c.id ), data: {confirm: 'Are you sure you want to post this ad?'}, :class => "usertwitbutton" %>
-					</div>
-				</div>
-			</div>
-		<% end %>
-
+		</div>
 	</div>
 </div>
 
