json now showing on campaigns index, need to push to other views

--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -12,3 +12,12 @@
   </tbody>
 </table>
 
+<h3>{{test}}</h3>
+<ul>
+  <li ng-repeat="campaign in campaigns">
+    {{ campaign.caption }}
+    {{ campaign.picture }}
+    {{ campaign.location }}
+    {{ campaign.release_date }}
+  </li>
+</ul>
