--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -15,9 +15,9 @@
 <h3>{{test}}</h3>
 <ul>
   <li ng-repeat="campaign in campaigns">
-    {{ campaign.caption }}
-    {{ campaign.picture }}
-    {{ campaign.location }}
-    {{ campaign.release_date }}
+    {{ campaign.id }}
+    {{ campaign.name }}
+    {{ campaign.status }}
+    {{ campaign.avatar_file_name }}
   </li>
 </ul>
